# dms-ai-assistant

./: AIAssistant.qml  AIAssistantDaemon.qml  AIAssistantService.qml  AIProviderUtils.js  AISessionUtils.js  AIStreamParser.js  CHANGELOG.md  ChatList.qml  MessageBubble.qml  MessageList.qml  markdownSegments.js  plugin.json
markdown/: CMakeLists.txt  MarkdownParser.cpp  MarkdownParser.h  plugin.cpp  qmldir  rebuild.sh
